packages/infra/k8s/expiration-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-service
  template:
    metadata:
      labels:
        app: expiration-service
    spec:
      containers:
        - name: expiration-service
          image: pramindanata/tix-expiration
          ports:
            - containerPort: 4000
