packages/infra/k8s/auth-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: pramindanata/tix-auth
          resources:
            requests:
              memory: '100Mi'
              cpu: '50m'
            limits:
              memory: '150Mi'
              cpu: '150m'
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: auth-service
      protocol: TCP
      port: 4000
      targetPort: 4000
