packages/infra/k8s/order-mongo.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-mongo
spec:
  replicas: 1
  serviceName: 'order-mongo-cluster-ip'
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
        - name: order-mongo
          image: mongo:4.2.3
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: order-mongo-storage
              mountPath: /data/db
              subPath: order-service
      volumes:
        - name: order-mongo-storage
          persistentVolumeClaim:
            claimName: app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-mongo-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: order-mongo
  ports:
    - name: order-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
