packages/infra/k8s/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: pramindanata/tix-order
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: order-service
      protocol: TCP
      port: 4000
      targetPort: 4000
