packages/infra/k8s/payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: pramindanata/tix-payment
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - name: payment-service
      protocol: TCP
      port: 4000
      targetPort: 4000
