packages/infra/k8s/ticket-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
        - name: ticket-service
          image: pramindanata/tix-ticket
          resources:
            requests:
              memory: '100Mi'
              cpu: '50m'
            limits:
              memory: '150Mi'
              cpu: '150m'
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: ticket-service
  ports:
    - name: ticket-service
      protocol: TCP
      port: 4000
      targetPort: 4000
